--- a/theday.html
+++ b/theday.html
@@ -10,15 +10,15 @@
 <div class="container-body">
     <div class="container-header">
         <div class="bannerimage"></div>    
-            <a href="index.html" class="hef">
+            <a href="index" class="hef">
                 <div class="titlecard"></div>
             </a>
         <p class="date">SATURDAY, JANUARY 11th, 2025</p>
             <div class="navigation">
-                <a href="theday.html" class="button-nav">The Day</a>
-                <a href="accommodation.html" class="button-nav">Accommodation</a>
-                <a href="themenu.html" class="button-nav">Menu</a>
-                <a href="rsvp.html" class="button-nav">RSVP</a>
+                <a href="theday" class="button-nav">The Day</a>
+                <a href="accommodation" class="button-nav">Accommodation</a>
+                <a href="themenu" class="button-nav">Menu</a>
+                <a href="rsvp" class="button-nav">RSVP</a>
             </div>
     </div>
 <main>
