--- a/rsvp.html
+++ b/rsvp.html
@@ -15,12 +15,28 @@
                 <div class="titlecard"></div>
             </a>
         <p class="date">SATURDAY, JANUARY 11th, 2025</p>
-            <div class="navigation">
-                <a href="theday" class="button-nav">The Day</a>
-                <a href="accommodation" class="button-nav">Accommodation</a>
-                <a href="themenu" class="button-nav">Menu</a>
-                <a href="rsvp" class="button-nav">RSVP</a>
-            </div>
+        <div class="menu">
+            <div>
+            <a href="theday">
+              The Day
+            </a>
+          </div>
+          <div>
+            <a href="accommodation">
+              Accommodation
+            </a>
+          </div>
+          <div>
+            <a href="themenu">
+              Menu
+            </a>
+          </div>
+          <div>
+            <a href="rsvp">
+              RSVP
+            </a>
+          </div>
+        </div>
     </div>
 
     <main>
