--- a/index.html
+++ b/index.html
@@ -13,12 +13,28 @@
         <div class="bannerimage"></div>    
         <div class="titlecard"></div>
         <p class="date">SATURDAY, JANUARY 11th, 2025</p>
-            <div class="navigation">
-                <a href="theday" class="button-nav">The Day</a>
-                <a href="accommodation" class="button-nav">Accommodation</a>
-                <a href="themenu" class="button-nav">Menu</a>
-                <a href="rsvp" class="button-nav">RSVP</a>
-            </div>
+        <div class="menu">
+            <div>
+            <a href="theday">
+              The Day
+            </a>
+          </div>
+          <div>
+            <a href="accommodation">
+              Accommodation
+            </a>
+          </div>
+          <div>
+            <a href="themenu">
+              Menu
+            </a>
+          </div>
+          <div>
+            <a href="rsvp">
+              RSVP
+            </a>
+          </div>
+        </div>
     </div>
 <main>
     <div class="mainpageimage">
