--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta name="color-scheme" content="light only">
+    <meta name="description" content="Your invitation to Kyle and Madi's Wedding">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Invitation</title>
+    <title>Kyle and Madi Say I do!</title>
    <link rel="stylesheet" href="stylesheet.css?version=1">
 </head>
 <body> 
