Updated Menu page
Updated menu page to add riverside woodfired pizza

--- a/themenu.html
+++ b/themenu.html
@@ -44,6 +44,7 @@
         <div class="mainmenu">
             <div class="menufood">
                 <h1 class="menufoodheader">Entree</h1>
+                <h2 class="foodtitle1">Riverside Woodfired Pizza</h2>
                 <div class="menufoodtext">
                     <h2 class="foodtitle">Garlic Pizza</h2>
                     <p class="food">Garlic infused olive oil base with cheese, garlic and fresh parsley</p>
@@ -53,6 +54,7 @@
                 </div>
         
                 <h1 class="menufoodheader">Main Menu</h1>
+                <h2 class="foodtitle1">Riverside Woodfired Pizza</h2>
                 <div class="menufoodtext">
                     <h2 class="foodtitle">Yiros Pizza</h2>
                     <p class="food">Tomato base, cheese, marinated lamb, tomato slices, capsicum, onion and crispy lettuce drizzled with tzatziki sauce</p>
