--- a/accommodation.html
+++ b/accommodation.html
@@ -46,7 +46,10 @@
                 <h1 class="acomh1">Bunk Style Accommodation</h1>
                 <P class="acomtext">If you're planning on an overnight stay, bunkstyle rooms are available.<br><br>
                 While we can't guarantee a room to yourself, we'll organise friends and families in rooms together.<br><br>
-                There are 8 rooms available with various numbers of beds available.
+                There are 8 rooms available with various numbers of beds available.<br><br>
+                The bunkbeds are strictly <b>BYO linen and bedding.</b>
+                If you want to arrive early, the beds are available for the Friday and Saturday nights. 
+                A light breakfast and lunch will be provided on the Saturday morning if you stay the Friday.
             </P>
             </div>
             <div class="image-container">
