--- a/accommodation.html
+++ b/accommodation.html
@@ -46,14 +46,15 @@
                 <h1 class="acomh1">Bunk Style Accommodation</h1>
                 <P class="acomtext">If you're planning on an overnight stay, bunkstyle rooms are available.<br><br>
                 While we can't guarantee a room to yourself, we'll organise friends and families in rooms together.<br><br>
-                There are 8 rooms available with various numbers of beds available.<br><br>
+                There are 6 rooms available with various numbers of beds available.<i> Rooms greyed out on the floorplan have been reserved and are unavailable</i>
+                <br><br>
                 The bunkbeds are strictly <b>BYO linen and bedding.</b>
                 If you want to arrive early, the beds are available for the Friday and Saturday nights. 
                 A light breakfast and lunch will be provided on the Saturday morning if you stay the Friday.
             </P>
             </div>
             <div class="image-container">
-                <img id="bunkimage" src="floorplan.jpg" alt="Manor Floor plan" class="thumbnail">
+                <img id="bunkimage" src="floorplan1.jpg" alt="Manor Floor plan" class="thumbnail">
                 <p>Click image to enlarge</p>
             </div>
             
