--- a/rsvp.html
+++ b/rsvp.html
@@ -45,7 +45,7 @@
         <div class="contact-container">
             <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
                 <div class="contact-left-title">
-                    <h2>Please let us know you're coming!</h2>
+                    <h2>Please RSVP by December 1st!</h2>
                 </div>
                 <input type="hidden" name="access_key" value="e7132b1d-bf76-4880-bef2-07ee915487bc">
                 <input type="text" name="name" placeholder="Your Name(s)" class="contact-inputs" required>
