--- a/rsvp.html
+++ b/rsvp.html
@@ -74,6 +74,11 @@
                     We can only cater for so many people and want to ensure you all have enough food and drink
                     to celebrate late into the night with us!
                 </p>
+              </p>
+              <hr>
+              <div class="rsvph2">Dress code</div>
+              <p class="rsvptext">Cocktail.
+              </p>
             </div>
         </div>
 
