--- a/themenu.html
+++ b/themenu.html
@@ -42,7 +42,8 @@
     <main>
     
         <div class="mainmenu">
-            <div class="menufood">
+            <div class="menufood"><br><Br>
+              <h1 class="foodtitle1">Pizzas servered first will be gluten free - please see the menu for vegetarian options</h1><br>
                 <h1 class="menufoodheader">Entree</h1>
                 <h2 class="foodtitle1">Riverside Woodfired Pizza</h2>
                 <div class="menufoodtext">
@@ -88,7 +89,7 @@
                 <p class="food">
                     A variety of drinks will be available for you to grab from the bar including red wine, cider, and beer.
                     <br><br>You will also be able to enjoy our amazing gin bar! 
-                    Gin and cider locally sourced by <i>Two Thumbs Brewing</i>.
+                    Cider locally sourced by <i>Two Thumbs Brewing</i>.
                 </p>
             </div>
         </div>
