--- a/themenu.html
+++ b/themenu.html
@@ -43,7 +43,7 @@
     
         <div class="mainmenu">
             <div class="menufood"><br><Br>
-              <h1 class="foodtitle1">Pizzas servered first will be gluten free - please see the menu for vegetarian options</h1><br>
+              <h1 class="foodtitle1">Pizzas served first will be gluten free - please see the menu for vegetarian options</h1><br>
                 <h1 class="menufoodheader">Entree</h1>
                 <h2 class="foodtitle1">Riverside Woodfired Pizza</h2>
                 <div class="menufoodtext">
@@ -87,9 +87,9 @@
             <div class="drinkstext">
                 <h2 class="foodtitle">BYO Your Favourites!</h2>
                 <p class="food">
-                    A variety of drinks will be available for you to grab from the bar including red wine, cider, and beer.
+                    A variety of drinks will be available for you to grab from the bar including red wine, cider, and beer. Cider locally sourced by <i>Two Thumbs Brewing</i>. We will also have soft drink and water available.
                     <br><br>You will also be able to enjoy our amazing gin bar! 
-                    Cider locally sourced by <i>Two Thumbs Brewing</i>.
+                    
                 </p>
             </div>
         </div>
